--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcc 'B'
 - !lcc 'CT'
 - !lcsh 'Comte, Auguste, 1798-1857'
+- GITenberg
 title: 'Critical Miscellanies (Vol. 3 of 3), Essay 10: Auguste Comte'
 url: http://www.gutenberg.org/ebooks/29033
